Added Splide Slider

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <link rel="stylesheet" href="play__content.css">
 <link rel="stylesheet" href="exemple.css">
 
+<link rel="stylesheet" href="splide.min.css">
+
 </head>
 
 
@@ -69,14 +71,19 @@
         </div>
         <div class="play__show">
             <div class="play__show__content">
-                <div class="carousel aaa">
-                    <div class="carousel__item box-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    </div>
-                    <div class="carousel__item box-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div class="splide aaa">
+                    <div class="splide__track">
+                        <ul class="splide__list">
+                            <div class="splide__slide ">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            </div>
+                            <div class="splide__slide ">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            </div>
+                        </ul>
                     </div>
                 </div>
+
                 <div class="box-text m-10">
                     Exemplo de item externo ao carrossel
                 </div>
@@ -828,6 +835,10 @@
 
     <script src="demos.js"></script>
     <script src="menu.js"></script>
+
+    <script src="vue.global.js"></script>
+    <script src="splide.min.js"></script>
+    <script src="vueslider.js"></script>
 </body>
 
 </html>
