Added image-shifter functionality

--- a/index.html
+++ b/index.html
@@ -936,14 +936,14 @@
                         <button type="button" class="class-button play__options__item" value="img-contain-h">Conter verticalmente</button>
                         <button type="button" class="class-button play__options__item" value="img-contain-w">Conter horizontalmente</button>
                     </div>
-                    <div class="play__show">
+                    <div class="play__show img-shift">
                         <div class="play__show__button">
-                            <button type="button" id="sw">Trocar</button>
+                            <button type="button" class="img-shifter" id="sw1">Trocar</button>
                         </div>
                         <div class="play__show__content">
                             <div class="color-1 box-1x1 box-img">
                                 <!-- <div class="box-img__contain"> -->
-                                    <img src="https://via.placeholder.com/500x90.png" alt="">
+                                    <img class="img-shifted" src="https://via.placeholder.com/500x90.png" alt="">
                                 <!-- </div> -->
                             </div>
                         </div>
@@ -959,14 +959,14 @@
                         <button type="button" class="class-button play__options__item" value="img-scale">Ajustar (conter se maior)</button>
                         <button type="button" class="class-button play__options__item" value="img-cover">Cortar</button>
                     </div>
-                    <div class="play__show">
+                    <div class="play__show img-shift">
                         <div class="play__show__button">
-                            <button type="button" id="sw">Trocar</button>
+                            <button type="button" class="img-shifter" id="sw2">Trocar</button>
                         </div>
                         <div class="play__show__content">
                             <div class="color-1 box-1x1 box-img">
                                 <!-- <div class="box-img__contain"> -->
-                                    <img src="https://via.placeholder.com/500x90.png" alt="">
+                                    <img class="img-shifted" src="https://via.placeholder.com/500x90.png" alt="">
                                 <!-- </div> -->
                             </div>
                         </div>
