Fix sticky option on position play.

--- a/index.html
+++ b/index.html
@@ -447,13 +447,14 @@
                             <button type="button" class="class-button play__options__item active" value="empty">Padrão (estatica)</button>
                             <button type="button" class="class-button play__options__item" value="absolute">Absotula</button>
                             <button type="button" class="class-button play__options__item" value="fixed">Fixa</button>
-                            <button type="button" class="class-button play__options__item aaa" value="sticky">Sticky</button>
+                            <button type="button" class="class-button play__options__item" value="sticky">Sticky</button>
                         </div>
-                        <div class="play__show">
+                        <div class="play__show" id="p-position-show">
                             <div class="play__show__content">
                                 <div class="box-1 color-1 m-30">
                                     <div class="float-item color-alert"></div>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.</p>
+                                    <div class="sticky-limit" id="sticky-limit-b"></div>
                                 </div>
                                 <div class="box-text m-30">
                                     Item externo - Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident.
@@ -975,8 +976,7 @@
             </div>
         </div>
     </section>
-
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="demos.js"></script>
     <script src="menu.js"></script>
 
