--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     
 <title>Pg</title>
     
-<link rel="stylesheet" href="splide.min.css">
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="play__content.css">
-<link rel="stylesheet" href="exemple.css">
+<link rel="stylesheet" href="assets/style/splide.min.css">
+<link rel="stylesheet" href="assets/style/style.css">
+<link rel="stylesheet" href="assets/style/play__content.css">
+<link rel="stylesheet" href="assets/style/exemple.css">
 </head>
 
 <body>
@@ -325,7 +325,7 @@
                 <p>
                     A “direção” do tamanho, que foi definido para o grid para um tamanho de tela, essas definições servem para esse tamanho para que intervalo de tamanho de tela. Basicamente  um tamanho pode ser pra telas igual ou acima daquele tamanho ou telas até aquele tamanho.</p>
                 <p>
-                    <img alt="" src="img/largura-telas.png" title="tamanhos de tela e secçoes" alt='Grafico mostrando larguras de tela e marcações 0px, menor que 600px, 600px, maior que 600px e menor que 1200px, 1200px, maior que 1200px e menor que 1800px, 1800px, maior que 1800px'></p>
+                    <img alt="" src="assets/img/largura-telas.png" title="tamanhos de tela e secçoes" alt='Grafico mostrando larguras de tela e marcações 0px, menor que 600px, 600px, maior que 600px e menor que 1200px, 1200px, maior que 1200px e menor que 1800px, 1800px, maior que 1800px'></p>
                 <p>
                     Regularmente o grid é composto</p>
                 <ul>
@@ -503,7 +503,7 @@
                         <p>
                             Um elemento para quando estiver vazio (imagem place holder ou texto genérico)
                         </p>
-                        <img src="img/blocoEspaço.png" title="Tipos de resultados sem uma parte do elemento" style="width: 500px;">
+                        <img src="assets/img/blocoEspaço.png" title="Tipos de resultados sem uma parte do elemento" style="width: 500px;">
                     </div>
                 </div>
                 <div class="part" id="blocoTamanho">
@@ -698,13 +698,13 @@
                             O alinhamento errado pode causar diferenças na versão final do site (se o desenvolvedor não se atentar ao erro do mockup) ou gasto de tempo do desenvolvedor que vai ter calcular o tamanho correto.
                         </p>
                         <p>
-                            <img src="img/texto-alinhamento.png" title="Alinhamento de margem certo e errado" alt="dois conjuntos de titulo e subtitulo com caixas de texto marcadas, o primeiro com o margens apartir do corpo do texto e mardado como errado e a segunda com margens apartir da caixa de testo e marcado como certo" style="width: 890px;">
+                            <img src="assets/img/texto-alinhamento.png" title="Alinhamento de margem certo e errado" alt="dois conjuntos de titulo e subtitulo com caixas de texto marcadas, o primeiro com o margens apartir do corpo do texto e mardado como errado e a segunda com margens apartir da caixa de testo e marcado como certo" style="width: 890px;">
                         </p>
                         <p>
                             Quando em texto deixar o espaço entre parágrafos visível, não há necessidade de fazer em todo o texto mas pelo menos um exemplo principalmente se o espaço for importante.
                         </p>
                         <p>
-                            <img alt="exemplo de dois paragrafos dentro de uma caixa de texto marcado como errado e a direita exemplo dos mesmos pagrafos em caixas separadas marcado como certo" src="img/entre-paragrafo.png" title="Exemplo de documentação entre paragrafos"  style="width: 850px;">
+                            <img alt="exemplo de dois paragrafos dentro de uma caixa de texto marcado como errado e a direita exemplo dos mesmos pagrafos em caixas separadas marcado como certo" src="assets/img/entre-paragrafo.png" title="Exemplo de documentação entre paragrafos"  style="width: 850px;">
                         </p>
                         <p>
                             Sobre o espaço entre parágrafos, pode ser definido o espaço entre parágrafos e paralelo a isso o texto pode usar uma linha vazia como espaçamento é importante considerar se você quer esse espaçamento em todos os parágrafos e também como será o texto recebido pelo elemento(principalmente em um site já existente). Se o texto recebido tem linhas vazias para espaçar parágrafos e margem inferior o resultado será espaço dobrado, o contrário (sem linhas vazias e sem margem) resultará em nenhum espaçamento entre parágrafos.
@@ -932,19 +932,19 @@
 
                 <div class="play play-multiple" id="p-image">
                     <div class="play__options">
-                        <button type="button" class="class-button play__options__item" value="img-stretch-h">Esticar vertical</button>
-                        <button type="button" class="class-button play__options__item" value="img-stretch-w">Esticar horizontalmente</button>
-                        <button type="button" class="class-button play__options__item" value="img-contain-h">Conter verticalmente</button>
-                        <button type="button" class="class-button play__options__item" value="img-contain-w">Conter horizontalmente</button>
+                        <button type="button" class="class-button play__options__item" value="assets/img-stretch-h">Esticar vertical</button>
+                        <button type="button" class="class-button play__options__item" value="assets/img-stretch-w">Esticar horizontalmente</button>
+                        <button type="button" class="class-button play__options__item" value="assets/img-contain-h">Conter verticalmente</button>
+                        <button type="button" class="class-button play__options__item" value="assets/img-contain-w">Conter horizontalmente</button>
                     </div>
                     <div class="play__show img-shift">
                         <div class="play__show__button">
-                            <button type="button" class="img-shifter" id="sw1">Trocar</button>
+                            <button type="button" class="assets/img-shifter" id="sw1">Trocar</button>
                         </div>
                         <div class="play__show__content">
                             <div class="color-1 box-1x1 box-img">
                                 <!-- <div class="box-img__contain"> -->
-                                    <img class="img-shifted" src="https://via.placeholder.com/500x90.png" alt="">
+                                    <img class="assets/img-shifted" src="https://via.placeholder.com/500x90.png" alt="">
                                 <!-- </div> -->
                             </div>
                         </div>
@@ -956,18 +956,18 @@
                 <div class="play play-single" id="p-image-1x1">
                     <div class="play__options">
                         <button type="button" class="class-button play__options__item active" value="empty">Esticar</button>
-                        <button type="button" class="class-button play__options__item" value="img-contain">Conter</button>
-                        <button type="button" class="class-button play__options__item" value="img-scale">Ajustar (conter se maior)</button>
-                        <button type="button" class="class-button play__options__item" value="img-cover">Cortar</button>
+                        <button type="button" class="class-button play__options__item" value="assets/img-contain">Conter</button>
+                        <button type="button" class="class-button play__options__item" value="assets/img-scale">Ajustar (conter se maior)</button>
+                        <button type="button" class="class-button play__options__item" value="assets/img-cover">Cortar</button>
                     </div>
                     <div class="play__show img-shift">
                         <div class="play__show__button">
-                            <button type="button" class="img-shifter" id="sw2">Trocar</button>
+                            <button type="button" class="assets/img-shifter" id="sw2">Trocar</button>
                         </div>
                         <div class="play__show__content">
                             <div class="color-1 box-1x1 box-img">
                                 <!-- <div class="box-img__contain"> -->
-                                    <img class="img-shifted" src="https://via.placeholder.com/500x90.png" alt="">
+                                    <img class="assets/img-shifted" src="https://via.placeholder.com/500x90.png" alt="">
                                 <!-- </div> -->
                             </div>
                         </div>
@@ -977,12 +977,12 @@
         </div>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="demos.js"></script>
-    <script src="menu.js"></script>
+    <script src="assets/js/demos.js"></script>
+    <script src="assets/js/menu.js"></script>
 
-    <script src="vue.global.js"></script>
-    <script src="splide.min.js"></script>
-    <script src="vueslider.js"></script>
+    <script src="assets/js/vue.global.js"></script>
+    <script src="assets/js/splide.min.js"></script>
+    <script src="assets/js/vueslider.js"></script>
 </body>
 
 </html>
