Adjust images url on css

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
     <!-- Grid -->
     <section>
         <div class="part" id="grid">
-            <button type="button" class="part__head open">
+            <button type="button" class="part__head">
                 <h2>
                     Grid    
                 </h2>
@@ -400,7 +400,7 @@
     <!-- Posicionamento -->
     <section>
         <div class="part" id="posicionamento">
-            <button type="button" class="part__head open">
+            <button type="button" class="part__head">
                 <h2>
                     Posicionamento
                 </h2>
@@ -472,7 +472,7 @@
     <!-- Blocos  -->
     <section>
         <div class="part" id="blocos">
-            <button type="button" class="part__head open">
+            <button type="button" class="part__head">
                 <h2>
                     Blocos
                 </h2>
@@ -620,7 +620,7 @@
     <!-- Texto -->
     <section>
         <div class="part" id="texto">
-            <button type="button" class="part__head open">
+            <button type="button" class="part__head">
                 <h2>
                 Texto
                 </h2>
@@ -844,7 +844,7 @@
     <!-- Imagens -->
     <section>
         <div class="part" id="imagens">
-            <button type="button" class="part__head open">
+            <button type="button" class="part__head">
                 <h2>
                     Imagens
                 </h2>
