--- a/index.html
+++ b/index.html
@@ -198,20 +198,20 @@
                     </button>
                     <div class="part__content">
                         <p>
-                            Elementos que ativam uma animação, transição e mudança. Essas informações são passadas melhor de maneira escrita (nota ou tabela com situações) ou com um exemplo muito detalhado (o elemento em funcionamento ou um vídeo com as situações).
+                            Elementos que ativam uma animação, transição e mudança. Essas informações são passadas melhor de maneira escrita (nota ou tabela com situações) ou com um exemplo muito detalhado (o elemento em funcionamento ou um vídeo com as situações). Informações importantes:
                         </p>
                         <ul>
                             <li>
-                                Oque ativa 
+                                O que ativa.
                             </li>
                             <li>
-                                se é infinito ou limitado
+                                Se é infinito ou finito.
                             </li>
                             <li>
-                                como vai funcionar
+                                Como vai funcionar.
                             </li>
                             <li>
-                                se possível um exemplo
+                                Se possível um exemplo.
                             </li>
                         </ul>
                         <p>Ex.: O quadrado flutuante a animação é ativada no <i>hover</i> do elemento total, o quadrado deve girar 90º uma vez e voltar ao estado inicial após o <i>hover</i>.</p>
@@ -224,8 +224,8 @@
                             Hover
                         </h4>
                         <p>
-                            Os elementos clicáveis ainda são entendíveis sem o <i>hover</i>
-                            .</p>
+                            Os elementos clicáveis ainda são entendíveis sem o <i>hover</i>.
+                        </p>
                         <p>
                             Existem telas de tamanho intermediário, logo o mesmo tamanho de tela pode ser um notebook ou um tablet, Informações que são exibidas em <i>hover</i> podem estar sempre visíveis em em <i>touch</i> ou ter outro comportamento (o desenvolvedor pode resolver especificar isso facilmente)
                         </p>
@@ -242,7 +242,7 @@
                         <input type="text" placeholder="clique para ver o focus" style="margin-right: 10px;" readonly>
                         <a href="#0" style="margin-right: 10px; ">do input ao lado aperte 
                             <span class="key">Tab ↹</span> para ver <i>focus</i> nesse link</a>
-                        <button class="btn btn--ex" type="button" style="margin-right: 10px; "><span class="key">Tab ↹</span> denovo para esse botão </button>
+                        <button class="btn btn--ex" type="button" style="margin-right: 10px; "><span class="key">Tab ↹</span> de novo para esse botão </button>
                     </div>
                 </div>
                 <!-- unidades -->
