Styled switch button.

--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@
                     </div>
                     <div class="play__show img-shift">
                         <div class="play__show__button">
-                            <button type="button" class="img-shifter" id="sw1">Trocar</button>
+                            <button type="button" class="img-shifter" id="sw1">Trocar imagem</button>
                         </div>
                         <div class="play__show__content">
                             <div class="color-1 box-1x1 box-img">
@@ -959,7 +959,7 @@
                     </div>
                     <div class="play__show img-shift">
                         <div class="play__show__button">
-                            <button type="button" class="img-shifter" id="sw2">Trocar</button>
+                            <button type="button" class="img-shifter" id="sw2">Trocar imagem</button>
                         </div>
                         <div class="play__show__content">
                             <div class="color-1 box-1x1 box-img">
