Fix image play bug.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                     <li><a href="#numeroDeColunas">Número de colunas</a></li>
                                     <li><a href="#maxContainer">Tamanho do container</a></li>
                                     <li><a href="#calha">Calha</a></li>
-                                    <li><a href="#margemExterna">Margem min externa</a></li>
+                                    <li><a href="#margemExterna">Margem mínima externa</a></li>
                                 </ol>
                             </li>
                             <li><a href="#posicionamento">Posicionamento</a>
@@ -340,7 +340,7 @@
                         Calha
                     </li>
                     <li>
-                        Margem min externa
+                        Margem mínima externa
                     </li>
                 </ul>
                 <div class="part" id="numeroDeColunas">
@@ -386,11 +386,11 @@
                 </div>
                 <div class="part" id="margemExterna">
                     <button type="button" class="part__head open">
-                        <h3>Margem min externa</h3>
+                        <h3>Margem mínima externa</h3>
                     </button>
                     <div class="part__content">
                         <p>
-                            &nbsp;esse atributo é mais necessário em casos onde o container ocupa 100% da tela, para definir a distância mínima entre conteúdo e borda, também pode ser usada para páginas onde o conteúdo tem um fundo de cor diferente do fundo do site
+                            Esse atributo é mais necessário em casos onde o container ocupa 100% da tela, para definir a distância mínima entre conteúdo e borda, também pode ser usada para páginas onde o conteúdo tem um fundo de cor diferente do fundo do site.
                         </p>
                     </div>
                 </div>
